<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">GYM CLUB</string>

    <!-- content description -->
    <string name="picString">图片</string>
    <string name="camString">照相</string>
    <!-- content description -->

    <!-- “首页”界面-->
    <string name="searchHintString">运动/健身</string>
    <string name="homepageHot1">今天的你健身了吗</string>
    <string name="homepageHot2">空中瑜伽课，不来挑战吗，一个月练出完美身材</string>
    <string name="inform">通知</string>
    <string name="stringDay">26</string>
    <string name="stringMonthYear">Sep.2018</string>
    <string name="string_mycourse">我的课程</string>
    <string name="string_recommendCource">为你推荐的课程</string>
    <string name="stringShowMCFail">获取已选课程失败，请刷新！</string>
    <string name="stringShowRCFail">获取推荐课程失败，请刷新！</string>
    <string name="stringSearchNull">请先输入搜索内容！</string>
    <string name="noMyCourse">您暂无选择的课程！</string>
    <string name="noRecCourse">暂无推荐的课程！</string>
    <!-- “首页”界面-->


    <!-- “我的”界面-->
    <string name="username">用户名</string>
    <string name="trainTimeLabel">训练时长</string>
    <string name="trainTime"></string>
    <string name="punch">打卡</string>
    <string name="logOutString">退出登录</string>
    <string name="vipLabel">会员</string>
    <string name="balanceLabel">余额</string>
    <string name="showFigureFail">头像显示失败！</string>
    <!-- “我的”界面-->

    <!-- “发现”界面 -->
    <string name="inputHint">请输入</string>
    <string name="search">查找</string>
    <string name="stringYoga">瑜伽</string>
    <string name="stringExercise">操类</string>
    <string name="stringApparatus">器械</string>
    <string name="stringOutdoor">户外</string>
    <string name="stringNutrition">营养</string>
    <string name="stringCoach">教练</string>
    <!-- “发现”界面 -->

    <!-- 显示“搜索”结果的界面 -->
    <string name="stringSearchingResult">搜索结果</string>
    <string name="stringSearchingFail">没有找到相关内容</string>
    <string name="stringShowCourseFail">获取内容失败，请刷新！</string>
    <string name="stringSearchingNull">请先输入搜索内容！</string>
    <string name="stringSearchFail">请求失败，请重试！</string>
    <!-- 显示“搜索”结果的界面 -->

    !-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- “社区”界面 -->
    <string name="stringCommunityPunch">今日打卡！！</string>
    <string name="stringCommunity">社区</string>
    <string name="stringShowCFail">获取社区动态失败，请刷新！</string>
    <!-- “社区”界面 -->

    <!-- “登录”与“注册”界面 -->
    <string name="labelPhoneNo">手机号/邮箱</string>
    <string name="labelPassword">密码</string>
    <string name="labelPWCheck">确认密码</string>
    <string name="labelRegister">注册</string>
    <string name="labelAlreadyRegistered">已有账号，点击</string>
    <string name="labelLogin">登录</string>
    <string name="labelSavePW">记住密码</string>
    <string name="labelNotRegistered">没有账号，点击</string>
    <!-- “登录”与“注册”界面 -->

    <!-- “我的进度”界面 -->
    <string name="string_mySchedule">我的进度</string>
    <!-- “我的进度”界面 -->

    <!-- 课程小节名称 -->
    <string name="playVideo">播放</string>
    <string name="yogaSche1_1">第一节——猫式瑜伽</string>
    <string name="yogaSche1_2">第二节——鸽式瑜伽</string>
    <string name="yogaSche1_3">第三节——背部训练</string>
    <string name="yogaSche1_4">第四节——全能拉伸</string>
    <!-- 课程小节名称 -->


</resources>
